# NeatFS

./: .gitignore  README.md  data  main.py  pyproject.toml  readme.md  scan_files.py  test.ipynb  test.py
notebooks/: 01_fs_index_analysis.ipynb  01_hash_speed_test.ipynb  02_directory_filter.ipynb  03_hashing.ipynb  test.py  tests.ipynb
src/neat_fs/: create_test_dataset.py  duplicate_directories_cli.py  duplicate_directories_finder.py  duplicate_files_finder.py  duplicate_finder.py  file_scanner.py  scan_files.py  utils.py
src/neat_fs/core/: fs_indexer.py
