[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-fs"
version = "0.1.0"
description = "Keeps your filesystem cleaner and organized. Scans for redundancy and clean up fast."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
notebook = [
    "matplotlib>=3.7.0",
    "notebook>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

